# MyStreet Release Notes

## 0.0.1 (04 Apr 2025)

-   Initial release

## 0.0.2 (04 Apr 2025)

-   Add Mock authentication
-   Add JWT authentication
-   Add Session storage

## 0.0.3 (05 Apr 2025)

-   Add Posts page
-   Add Creating a post functionaility
-   Add Displaying posts

# 0.0.4 (09 Apr 2025)

-   Add Authorization if you want to see posts
-   Add Ability to like & comment
-   JTW Session lasts 30 days
-   Updated UI for Login - Signup & Posts Pages

# 0.0.5 (12 Apr 2025)

-   Add Email Verification through sending a code in mail
-   Home Pages show groups & users can choose which group they want to join
-   Add CTA Button on the BOTTOM-left to create a post, when in a group
-   Add Anonymous mode when creating a post
-   Add Forgot Password Page
-   Add Sending Email Page
-   Add Seperate Posts Page
-   Add Create A Post Page
-   Add Create A Group Page
-   Enhanced Post Look (Bold, italic & general typography fixes)

# 0.0.6 (13 Apr 2025)

-   Posts aren't global anymore
-   Groups now have their own posts
-   Users can create posts in a specific group
-   Add joining groups
-   Add Admins
-   Add security checks in groups when interacting with posts

# 0.0.7 (15 Apr 2025)

-   Add Preview of the post the user created before actually posting it
-   Add Non Logged in users can view up to 5 latest posts per group
-   Add Logic for creators of groups to choose between a private and public group
-   Add Notification system, through Email

# 0.0.8 (19 Apr 2025)

-   Add Deleting comments
-   Rebuilt Home Page to show posts like Instagram
-   Add Searching for groups in the Home Page
-   Fixed Authorization to create a group or a post

# To be added in the future

-   Add OAuth

-   Allow Images in posts (possibly more than 1 per post)
-   Fix Commenting logic
-   Add Editing posts & comments
-   Reporting users & only allow admins to view the reports

-   Desktop responsiveness (Currently only responsive for a mobile device)