@@ -10,6 +10,7 @@
     liked_by_user: False  
     orientation: "vertical"
     created_by_current_user: False
+    anonymous: False
     size_hint_y: None
     height: self.minimum_height
 
