@@ -169,6 +169,7 @@ class HomeScreen(MDScreen):
                         "text": post.get("text", "No Content"),
                         "like_count": len(post.get("likes", [])),
                         "liked_by_user": post.get("liked_by_user", False),
+                        "anonymous": post.get("anonymous", False),
                         "comment_count": len(post.get("comments", [])),
                         "created_by_current_user": post.get("created_by_current_user", False),
                         "group_id": post.get("group_id", None)
